Made some subtle change to the navbar: reduced items separator height; increased search box width so it's aligned with sidebar border; corrected vertical alignment of the RSS icon

--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -43,10 +43,10 @@ body > nav {
       @include horizontal-list(0);
       float: left;
       display: block;
-      padding-top: .1em;
+      padding-top: .3em;
     }
     ul.subscription {
-      margin-left: .8em;
+      margin-left: .7em;
       float: right;
       li:last-child a { padding-right: 0; }
     }
@@ -61,8 +61,8 @@ body > nav {
       float: left;
       text-decoration: none;
       font-size: 1.1em;
-      padding: .1em 0;
-      line-height: 1.5em;
+      padding: 0 0 0.1em 0;
+      line-height: 1.3em;
     }
     li + li {
       border-left: 1px solid $nav-border-left;
@@ -76,7 +76,7 @@ body > nav {
       float: right;
       text-align: left;
       padding-left: .8em;
-      width: $sidebar-width-medium - $pad-medium*2 - $sidebar-pad-medium + 47px;
+      width: $sidebar-width-medium - $pad-medium*2 - $sidebar-pad-medium + 54px;
       .search {
         width: 93%;
         font-size: .95em;
@@ -92,7 +92,7 @@ body > nav {
   }
   @media only screen and (min-width: 992px) {
     form {
-      width: $sidebar-width-wide - $pad-wide - $sidebar-pad-wide*2 + 47px;
+      width: $sidebar-width-wide - $pad-wide - $sidebar-pad-wide*2 + 54px;
     }
     ul[data-subscription$=email] + form {
       width: $sidebar-width-wide - $pad-wide - $sidebar-pad-wide*2 - 58px;
@@ -132,7 +132,7 @@ body > nav {
       }
     }
   }
-  ul.subscription { position: relative; top: 0; li, a { border: 0; padding: 0; }}
+  ul.subscription { position: relative; top: 0; padding-top: .15em; li, a { border: 0; padding: 0; }}
   a[rel=subscribe-rss]{ @include mask-subscription-nav('rss.png'); }
   a[rel=subscribe-email]{ @include mask-subscription-nav('email.png'); }
 }
